fixed something and added Validation

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <a
             class="twitter-link"
             target="_blank"
-            href="https://x.com/iitrybegood"
+            href="https://github.com/nurehab"
             >Nour Ihab</a
           >. Use for learning or your portfolio. Don't use to teach. Don't claim
           as your own.
